[project]
name = "cars-multi-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.48",
    "dj-database-url>=3.1.0",
    "django>=6.0.2",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.2",
    "django-tenants>=3.10.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
